--- a/app/static/css/tabs.css
+++ b/app/static/css/tabs.css
@@ -7,6 +7,7 @@
     margin: 0;
     font-style: normal;
     line-height: normal;
+    z-index: -1;
     font-size: 17px;
     color: black;
     border: 1px solid #838383;
@@ -39,7 +40,7 @@
 
 }
 
-.nav-tabs > li.active > a:hover, a:active, a:focus {
+.nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:active, .nav-tabs > li.active > a:focus {
     box-shadow: 0 -4px 4px rgba(0, 0, 0, 0.25);
     color: black;
 
