--- a/applications/templates/include/status.html
+++ b/applications/templates/include/status.html
@@ -1,7 +1,6 @@
 {% if application %}
-    <p class="text-center lead">Status</p>
     <div class="alert alert-{% if application.is_cancelled %}danger{% elif application.answered_invite %}success{% else %}warning{% endif %} lead">
-        {{ application.get_soft_status_display }}
+        Status: <b>{{ application.get_soft_status_display }}</b>
     </div>
     <hr>
 {% endif %}
