--- a/user/templates/signup.html
+++ b/user/templates/signup.html
@@ -21,7 +21,7 @@
             {% csrf_token %}
             {% bootstrap_form form  %}
             <button class="btn btn-primary btn-block" type="submit">{% trans "Sign Up" %}</button>
-            <a class="btn btn-reverse btn-block"
+            <a class="btn btn-block"
                href="{% url 'account_login' %}">{% trans "...or log in if you already have an account " %}</a>
         </form>
     {% endif %}
