add tabs interface to check in

--- a/app/templates/base_tabs.html
+++ b/app/templates/base_tabs.html
@@ -7,7 +7,7 @@
 {% endblock %}
 {% block body %}
     <div class="row margin-top">
-        <div class="col-md-12">
+        <div class="{% block cols-panel %}col-md-12{% endblock %}">
             <div>
                 <ul class="nav nav-tabs">
                     {% for title,url,needs_action in tabs %}
