--- a/checkin/templates/checkin/list.html
+++ b/checkin/templates/checkin/list.html
@@ -1,40 +1,3 @@
-{% extends "base.html" %}
-{% load humanize %}
-{% load django_tables2 %}
-{% load bootstrap3 %}
-{% load static %}
+{% extends "base_table.html" %}
 {% block head_title %}Check In{% endblock %}
-{% block head %}
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="//code.jquery.com/jquery-2.0.0.min.js"></script>
-{% endblock %}
-{% block body %}
-    <div class="row margin-top">
-        <div class="col-md-10 col-md-offset-1">
-            <div style="text-align: center;">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h4 class="text-center">{% block panel_title %}Confirmed applications{% endblock %}</h4>
-                    </div>
-                    <div class="panel-body">
-                        {% if filter %}
-                            <form action="" method="get" class="form form-inline text-left filter">
-                                {% bootstrap_form filter.form %}
-                                {% bootstrap_button 'Search' %}
-                            </form>
-                        {% endif %}
-                    </div>
-                    {% render_table table 'django_tables2/bootstrap-responsive.html' %}
 
-                    <div class="panel-footer">
-                        {% block extra_buttons %}
-                            <a class="btn btn-default btn-block" href="{% url 'check_in_all_list' %}">Non-confirmed
-                                applications</a>
-                        {% endblock %}
-                        <a class="btn btn-info btn-block" href="{% url 'check_in_qr' %}">QR Scanner</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-{% endblock %}
