--- a/reimbursement/templates/reimbursement_hacker.html
+++ b/reimbursement/templates/reimbursement_hacker.html
@@ -8,7 +8,7 @@
 
 
     {% if reimbursement.can_submit_receipt %}
-
+        {% include 'include/r_status.html' %}
         <h3>Reimbursement information</h3>
         <dl>
             <dt>Amount</dt>
@@ -34,23 +34,26 @@
         </div>
     {% else %}
         {% if reimbursement.waitlisted %}
+            {% include 'include/r_status.html' %}
             {% include 'include/waitlisted_reimbursement.html' %}
         {% elif reimbursement.expired %}
+            {% include 'include/r_status.html' %}
             Unfortunately your travel reimbursement has expired. We sent your travel reimbursement
             {{ reimbursement.update_time|timesince }} ago but you haven't uploaded a valid ticket. Send us an email to
             {{ h_contact_email|urlize }} if you
             think this is an error.
         {% elif reimbursement.has_friend_submitted %}
+            {% include 'include/r_status.html' %}
             <p>Your friend {{ reimbursement.friend_submission.hacker.get_full_name }}
                 ({{ reimbursement.friend_submission.hacker.email }}) already uploaded a receipt that covered
                 your travel. Let us know if you think this is an error.</p>
         {% else %}
+            {% include 'include/r_status.html' %}
+
             <dl>
                 <dt>Origin</dt>
                 <dd>{{ reimbursement.origin }}</dd>
 
-                <dt>Status</dt>
-                <dd>{{ reimbursement.get_status_display }}</dd>
                 {% if not reimbursement.is_draft  and not reimbursement.waitlisted %}
                     <dt>Amount</dt>
                     <dd>
