style for HackCU IV

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -53,7 +53,7 @@
 </head>
 
 
-<body>
+<body style="background: #22292c;">
 {% block navbar %}
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
