--- a/applications/templates/dashboard.html
+++ b/applications/templates/dashboard.html
@@ -104,10 +104,10 @@
                     <p>{{ h_leave }}</p>
                 {% endif %}
 
-                <div class="col-md-6 no-padding"><a href="{% url 'confirm_app' application.uuid_str %}"
+                <div class="col-md-5  no-padding"><a href="{% url 'confirm_app' application.uuid_str %}"
                                                     class="btn  btn-success btn-block">Confirm</a>
                 </div>
-                <div class="col-md-6 no-padding"><a href="{% url 'cancel_app' application.uuid_str %}"
+                <div class="col-md-offset-2 col-md-5 no-padding"><a href="{% url 'cancel_app' application.uuid_str %}"
                                                     class="btn  btn-danger btn-block">Cancel</a></div>
             </div>
         {% else %}
@@ -115,12 +115,12 @@
                 {% include 'include/status.html' %}
                 <p> When decisions are released, you'll be able to see your results on this page.</p>
                 <p>If you have any questions or concerns, you can still reach us at {{ h_contact_email|urlize }}</p>
-                <div class="col-md-6 no-padding">
+                 <div class="col-md-5 no-padding">
                     <a href="{% url 'application' %}" class="btn  btn-success btn-block">
                         View{% if application.can_be_edit %}/Edit{% endif %} application
                     </a>
                 </div>
-                <div class="col-md-6 no-padding">
+                <div class="col-md-offset-2 col-md-5 no-padding">
                     <a href="{% url 'teams' %}" class="btn  btn-info btn-block">
                         {% if user.team %}
                             View
