--- a/teams/templates/team.html
+++ b/teams/templates/team.html
@@ -11,15 +11,29 @@
             hackers</p>
         <hr>
         <h3>Teammates ({{ teammates|length }}/{{ h_max_team }})</h3>
-        <ul>
-            {% for hacker in teammates %}
-                {% if hacker.app %}
-                    <li>{{ hacker.name }} ({{ hacker.email }})</li>
-                {% else %}
-                    <li>Somebody (has not finished application yet!)</li>
-                {% endif %}
-            {% endfor %}
-        </ul>
+        <div class="table-responsive">
+
+            <table class="table table-hover">
+                <thead>
+                <tr>
+                    <th><b>Name</b></th>
+                    <th><b>Email</b></th>
+                    <th><b>Finished application?</b></th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for hacker in teammates %}
+                    <tr>
+                        <td>{{ hacker.name }} </td>
+                        <td>{{ hacker.email }} </td>
+                        <td><i class="fa {% if hacker.app %}fa-check{% else %}fa-times{% endif %}"
+                               aria-hidden="true"></i>
+                        </td>
+                    </tr>
+                {% endfor %}
+                <tbody>
+            </table>
+        </div>
         <hr>
         <form action="" method="post" class="form">
             {% csrf_token %}
@@ -30,13 +44,14 @@
 
 
     {% elif not h_app_closed and not team %}
+        <p>Do you have a team already? Join it below. Otherwise you can create a new team. </p>
         <form action="" method="post" class="form ">
             {% csrf_token %}
             {% bootstrap_form form %}
-            <div class="col-md-6 no-padding">
+            <div class="col-md-5 no-padding">
                 <button class="btn btn-success btn-block" type="submit">Join team</button>
             </div>
-            <div class="col-md-6 no-padding">
+            <div class="col-md-5 col-md-offset-2 no-padding">
                 <button class="btn btn-primary btn-block" name="create" value="create" type="submit">Create team
                 </button>
             </div>
